<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.joelcano.projectes.examenm8uf1.PartitActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#16a6c6">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/local"
            android:id="@+id/nomLocal"
            android:layout_marginTop="37dp"
            android:layout_marginStart="43dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/visitante"
            android:id="@+id/nomVisitant"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="115dp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/tvLocal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="40dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/tvVisitant"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="40dp"
            android:layout_marginLeft="160dp"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24">

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/restarLocal" />

        <Spinner
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:id="@+id/nLocal" />

        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/sumarLocal" />

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/restarVisitant"
            android:layout_marginLeft="40dp" />

        <Spinner
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:id="@+id/nVisitant" />

        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/sumarVisitant" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:id="@+id/btEnviar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalizar"
            android:id="@+id/btFinal" />
    </LinearLayout>
</LinearLayout>
